--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="btn">Замовити послугу</button>
+          <button type="button" class="btn" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!--section specifications-->
@@ -124,13 +124,28 @@
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="list activities-list">
             <li class="list-item activities-item">
-              <img class="pic" src="./images/box1.jpg" alt="розробка" width="370" />
+              <div class="act-thumb">
+                <img class="pic" src="./images/box1.jpg" alt="розробка" width="370" />
+                <div class="act-overlay">
+                  <p class="act-desc">десктопні додатки</p>
+                </div>
+              </div>
             </li>
             <li class="list-item activities-item">
-              <img class="pic" src="./images/box2.jpg" alt="адаптування" width="370" />
+              <div class="act-thumb">
+                <img class="pic" src="./images/box2.jpg" alt="адаптування" width="370" />
+                <div class="act-overlay">
+                  <p class="act-desc">мобільні додатки</p>
+                </div>
+              </div>
             </li>
             <li class="list-item activities-item">
-              <img class="pic" src="./images/box3.jpg" alt="дизайн" width="370" />
+              <div class="act-thumb">
+                <img class="pic" src="./images/box3.jpg" alt="дизайн" width="370" />
+                <div class="act-overlay">
+                  <p class="act-desc">дизайнерські рішення</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -448,5 +463,16 @@
         </div>
       </div>
     </footer>
+    <!-- Modal Window -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="cross" width="18" height="18">
+            <use href="./images/icons.svg#close-cross"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
