--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,15 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img class="picture" src="./images/img11.jpg" alt="ноутбук" width="370" />
+                  <div class="thumb">
+                    <img class="picture" src="./images/img11.jpg" alt="ноутбук" width="370" />
+                    <div class="overlay">
+                      <p class="overlay-desc"
+                        >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.</p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle">Технокряк</h2>
                     <p class="card-text">Веб-сайт</p>
@@ -97,12 +105,17 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img
-                    class="picture"
-                    src="./images/img12.jpg"
-                    alt="спортивний постер"
-                    width="370"
-                  />
+                  <div class="thumb">
+                    <img
+                      class="picture"
+                      src="./images/img12.jpg"
+                      alt="спортивний постер"
+                      width="370"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle">
                       Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -115,12 +128,17 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img
-                    class="picture"
-                    src="./images/img13.jpg"
-                    alt="логотип ресторану"
-                    width="370"
-                  />
+                  <div class="thumb">
+                    <img
+                      class="picture"
+                      src="./images/img13.jpg"
+                      alt="логотип ресторану"
+                      width="370"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle">Ресторан <span lang="eu">Seafood</span></h2>
                     <p class="card-text">Додаток</p>
@@ -131,7 +149,12 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img class="picture" src="./images/img14.jpg" alt="навушники" width="370" />
+                  <div class="thumb">
+                    <img class="picture" src="./images/img14.jpg" alt="навушники" width="370" />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle">Проєкт <span lang="eu">Prime</span></h2>
                     <p class="card-text">Маркетинг</p>
@@ -142,7 +165,12 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img class="picture" src="./images/img15.jpg" alt="коробочки" width="370" />
+                  <div class="thumb">
+                    <img class="picture" src="./images/img15.jpg" alt="коробочки" width="370" />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle">Проєкт <span lang="eu">Boxes</span></h2>
                     <p class="card-text">Додаток</p>
@@ -153,7 +181,13 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img class="picture" src="./images/img16.jpg" alt="прегляд сайту" width="370" />
+                  <div class="thumb">
+                    <img class="picture" src="./images/img16.jpg" alt="прегляд сайту" width="370" />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
+
                   <div class="card-wrapper">
                     <h2 class="subtitle" lang="eu">Inspiration has no borders</h2>
                     <p class="card-text">Веб-сайт</p>
@@ -164,7 +198,12 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img class="picture" src="./images/img17.jpg" alt="журнал" width="370" />
+                  <div class="thumb">
+                    <img class="picture" src="./images/img17.jpg" alt="журнал" width="370" />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle"> Видання <span lang="eu">Limited Edition</span> </h2>
                     <p class="card-text">Дизайн</p>
@@ -175,7 +214,12 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img class="picture" src="./images/img18.jpg" alt="логотип тегу" width="370" />
+                  <div class="thumb">
+                    <img class="picture" src="./images/img18.jpg" alt="логотип тегу" width="370" />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle">Проєкт <span lang="eu">LAB</span></h2>
                     <p class="card-text">Маркетинг</p>
@@ -186,18 +230,23 @@
             <li class="gallery-card">
               <a href="#" class="gallery-link">
                 <div class="wrap">
-                  <img
-                    class="picture"
-                    src="./images/img19.jpg"
-                    alt="комп'ютерна розробка"
-                    width="370"
-                  />
+                  <div class="thumb">
+                    <img
+                      class="picture"
+                      src="./images/img19.jpg"
+                      alt="комп'ютерна розробка"
+                      width="370"
+                    />
+                    <div class="overlay">
+                      <p class="overlay-desc"></p>
+                    </div>
+                  </div>
                   <div class="card-wrapper">
                     <h2 class="subtitle" lang="en">Growing Business</h2>
                     <p class="card-text">Додаток</p>
                   </div></div
-                ></a
-              >
+                >
+              </a>
             </li>
           </ul>
         </div>
