--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!--Fonts-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <!--styles-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -27,9 +24,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="main-nav">
-          <a class="logo" lang="en" href="./index.html"
-            >Web<span class="header-stud">Studio</span></a
-          >
+          <a class="logo" lang="en" href="./index.html">Web<span class="header-stud">Studio</span></a>
           <ul class="nav-list">
             <li class="nav-item">
               <a class="nav-link current" href="./index.html">Студія</a>
@@ -80,9 +75,7 @@
                 </svg>
               </div>
               <h3 class="section-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-              </p>
+              <p class="text"> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
             </li>
             <li class="list-item spec-list-item">
               <div class="specifications-icon">
@@ -91,9 +84,7 @@
                 </svg>
               </div>
               <h3 class="section-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-              </p>
+              <p class="text"> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
             </li>
             <li class="list-item spec-list-item">
               <div class="specifications-icon">
@@ -111,9 +102,7 @@
                 </svg>
               </div>
               <h3 class="section-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="text">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-              </p>
+              <p class="text"> Значимість цих проблем настільки очевидна, що реалізація планових завдань. </p>
             </li>
           </ul>
         </div>
@@ -162,49 +151,23 @@
                 <p class="desc" lang="en">Product Designer</p>
                 <ul class="socials list">
                   <li class="socials-item"
-                    ><a
-                      href="https://www.instagram.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="instagram"
-                    >
+                    ><a href="https://www.instagram.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="instagram">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://twitter.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="twitter"
-                    >
+                    ><a href="https://twitter.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="twitter">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.facebook.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="facebook"
-                    >
+                    ><a href="https://www.facebook.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="facebook">
                       <svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use></svg></a
-                  ></li>
+                        <use href="./images/icons.svg#facebook"></use></svg></a></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.linkedin.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="linkedin"
-                    >
+                    ><a href="https://www.linkedin.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="linkedin">
                       <svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use></svg></a
-                  ></li>
+                        <use href="./images/icons.svg#linkedin"></use></svg></a></li>
                 </ul>
               </div>
             </li>
@@ -215,46 +178,22 @@
                 <p class="desc" lang="en">Frontend Developer</p>
                 <ul class="socials list">
                   <li class="socials-item"
-                    ><a
-                      href="https://www.instagram.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="instagram"
-                    >
+                    ><a href="https://www.instagram.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="instagram">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://twitter.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="twitter"
-                    >
+                    ><a href="https://twitter.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="twitter">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.facebook.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="facebook"
-                    >
+                    ><a href="https://www.facebook.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="facebook">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.linkedin.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="linkedin"
-                    >
+                    ><a href="https://www.linkedin.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="linkedin">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg></a
                   ></li>
@@ -268,46 +207,22 @@
                 <p class="desc" lang="en">Marketing</p>
                 <ul class="socials list">
                   <li class="socials-item"
-                    ><a
-                      href="https://www.instagram.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="instagram"
-                    >
+                    ><a href="https://www.instagram.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="instagram">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://twitter.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="twitter"
-                    >
+                    ><a href="https://twitter.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="twitter">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.facebook.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="facebook"
-                    >
+                    ><a href="https://www.facebook.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="facebook">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.linkedin.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="linkedin"
-                    >
+                    ><a href="https://www.linkedin.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="linkedin">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg></a
                   ></li>
@@ -321,46 +236,22 @@
                 <p class="desc" lang="en">UI Designer</p>
                 <ul class="socials list">
                   <li class="socials-item"
-                    ><a
-                      href="https://www.instagram.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="instagram"
-                    >
+                    ><a href="https://www.instagram.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="instagram">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://twitter.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="twitter"
-                    >
+                    ><a href="https://twitter.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="twitter">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.facebook.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="facebook"
-                    >
+                    ><a href="https://www.facebook.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="facebook">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg></a
                   ></li>
                   <li class="socials-item"
-                    ><a
-                      href="https://www.linkedin.com/"
-                      class="socials-link"
-                      target="_blank"
-                      rel="noopener no refferrer"
-                      aria-label="linkedin"
-                    >
+                    ><a href="https://www.linkedin.com/" class="socials-link" target="_blank" rel="noopener no refferrer" aria-label="linkedin">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg></a
                   ></li>
@@ -413,19 +304,11 @@
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-nav">
-          <a class="logo footer-logo" lang="en" href="./index.html"
-            >Web<span class="footer-stud">Studio</span></a
-          >
+          <a class="logo footer-logo" lang="en" href="./index.html">Web<span class="footer-stud">Studio</span></a>
           <address>
             <ul class="list">
               <li class="address-list">
-                <a
-                  class="link"
-                  href="https://goo.gl/maps/RMe9iffRCKQZoAKb7"
-                  target="_blank"
-                  rel="noopener no refferrer"
-                  >м. Київ, пр-т Лесі Українки,26</a
-                >
+                <a class="link" href="https://goo.gl/maps/RMe9iffRCKQZoAKb7" target="_blank" rel="noopener no refferrer">м. Київ, пр-т Лесі Українки,26</a>
               </li>
               <li class="address-list">
                 <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
